@@ -5,6 +5,7 @@ Best: 32
 23-03-2025
 Streak: 1
     - Following Tutorial: Finish layout of HomeScreen
+    - Following Tutorial: Create MongoDB class in data layer
 
 20-03-2025
 Streak: 1
